<resources>
    <string name="app_name" translatable="false">Paws</string>
    <string name="sign_out_button">Выйти из профиля</string>
    <string name="create_button">Создать</string>
    <string name="update_button">Обновить</string>
    <string name="delete_pet_button">Удалить профиль питомца</string>
    <string name="delete_user_button">Удалить профиль пользователя</string>
    <string name="back_button">Назад</string>
    <string name="to_main_fragment_button">На главную страницу</string>
    <string name="signed_out_toast">Вы вышли из профиля</string>
    <string name="my_pets">Мои питомцы</string>
    <string name="settings">Настройки</string>
    <string name="theme_header">Тема</string>
    <string name="language_header">Язык</string>
    <string name="language_warning">При смене языка приложение автоматически будет перезагружено</string>
    <string name="default_settings">По умолчанию</string>
    <string name="deleted">Удалено</string>
    <string name="updated">Обновлено</string>
    <string name="created">Создано</string>
    <string name="saved">Сохранено</string>
    <string name="added">Добавлено</string>
    <string name="choose_pet">Выберите питомца:</string>
    <string name="cancel">Отмена</string>
    <string name="add_pet">Добавить питомца</string>
    <string name="name_pet">Имя</string>
    <string name="species">Вид</string>
    <string name="breed">Порода</string>
    <string name="sex">Пол</string>
    <string name="birthday">День рождения</string>
    <string name="hair">Шерсть</string>
    <string name="error">Ошибка</string>
    <string name="errorNewPet">Это поле не может быть пустым</string>
    <string name="not_elem">тут пока нет элементов</string>
    <string name="delete_note">Вы действительно хотите удалить запись?</string>
    <string name="delete_profile">Вы действительно хотите удалить профиль?</string>
    <string name="delete_profile_msg">Отменить действие будет невозможно!</string>
    <string name="delete_yes">Удалить</string>
    <string name="add">добавить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="warning">Изменить имя питомца будет нельзя. Пожалуйста, будьте внимательны и проверяйте правильность ввода теста.</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Имя питомца</string>
    <string name="nav_header_subtitle">Возраст питомца</string>

    <string name="menu_notes">Заметки</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_vaccines">Вакцинация</string>
    <string name="menu_procedures">Операции</string>
    <string name="menu_from_external_parasites">От внешних паразитов</string>
    <string name="menu_dehelmintization">Дегельминтизация</string>
    <string name="menu_reproduction">Репродукция</string>
    <string name="menu_identification">Идентификация</string>

    <string name="title_notes">Название</string>
    <string name="description">Описание</string>
    <string name="date">Дата</string>
    <string name="nameitem">Название</string>
    <string name="time_date">Дата / Время</string>
    <string name="time">Время</string>
    <string name="manufacturer_item">Производитель</string>
    <string name="dose_item">Доза</string>
    <string name="veterinarian_item">Ветеринар</string>
    <string name="date_dehelmintization">Дата дегельминтизации</string>
    <string name="time_dehelmintization">Время дегельминтизации</string>
    <string name="microchip_number">Номер микрочипа</string>
    <string name="date_of_microchipping">Дата чипирования</string>
    <string name="microchip_location">Расположение микрочипа</string>
    <string name="date_of_tattooing">Дата клеймения</string>
    <string name="tattoo_number">Клеймо</string>
    <string name="type">Тип</string>
    <string name="anesthesia">Анестезия</string>
    <string name="date_of_surgical_procedure">Дата операции</string>
    <string name="date_of_birth">Дата родов</string>
    <string name="date_of_heat">Дата течки</string>
    <string name="date_of_mating">Дата вязки</string>
    <string name="number_of_the_litter">Кол-во в помете</string>
    <string name="valid_until">Действует до</string>
    <string name="galleryImage">Картинка</string>
    <string name="pin">Закрепить/Открепить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">ЗАВЕРШИТЬ</string>
    <string name="skip">пропустить</string>
    <string name="next">ДАЛЬШЕ</string>
    <string name="hello">Привет! Меня зовут Лотти.</string>
    <string name="hello2">Мне очень приятно видеть тебя тут ♥</string>
    <string name="google_signin">Важно: вход в приложение осуществляется только через гугл-аккаунт</string>
    <string name="google_signin2">Это необходимо для того, чтобы ваши данные не потерялись. А также, чтобы у вас был доступ к ним с нескольких устройств сразу!</string>

</resources>