<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vet_passport_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.hhh.paws.ui.petProfile.menu.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.hhh.paws.ui.petProfile.menu.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_vaccines"
        android:name="com.hhh.paws.ui.petProfile.menu.vaccines.VaccinesFragment"
        android:label="@string/menu_vaccines"
        tools:layout="@layout/fragment_vaccines" />
    <fragment
        android:id="@+id/nav_procedures"
        android:name="com.hhh.paws.ui.petProfile.menu.procedures.ProceduresFragment"
        android:label="@string/menu_procedures"
        tools:layout="@layout/fragment_procedures" />
    <fragment
        android:id="@+id/nav_treatment"
        android:name="com.hhh.paws.ui.petProfile.menu.treatment.TreatmentFragment"
        android:label="@string/menu_from_external_parasites"
        tools:layout="@layout/fragment_treatment" />
    <fragment
        android:id="@+id/nav_dehelmintization"
        android:name="com.hhh.paws.ui.petProfile.menu.dehelmintization.DehelmintizationFragment"
        android:label="@string/menu_dehelmintization"
        tools:layout="@layout/fragment_dehelmintization" />
    <fragment
        android:id="@+id/nav_reproduction"
        android:name="com.hhh.paws.ui.petProfile.menu.reproduction.ReproductionFragment"
        android:label="@string/menu_reproduction"
        tools:layout="@layout/fragment_reproduction" />
    <fragment
        android:id="@+id/nav_identification"
        android:name="com.hhh.paws.ui.petProfile.menu.identification.IdentificationFragment"
        android:label="@string/menu_identification"
        tools:layout="@layout/fragment_identification" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hhh.paws.ui.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation>