<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.viewPager2Start.SecondFragment">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/panda"
        app:layout_constraintBottom_toTopOf="@id/finishTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/secondTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_signin"
            android:textSize="22sp"
            android:layout_margin="16dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/second2TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_signin2"
            android:textSize="12sp"
            android:layout_margin="16dp"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/finishTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/finish"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>